# StereoCalib

./: CMakeLists.txt
TestIntrin/: CMakeLists.txt  main.cpp  main.h
TestIntrin/Config/: RGBDistortion.xml  RGBIntrinsic.xml  ToFDistortion.xml  ToFIntrinsic.xml
TestIntrin/left/: 00000001  00000002  00000003  00000004  00000005  00000006  00000007  00000008  00000009  00000010  00000011  00000012  00000013  00000014  00000015  00000016  00000017  00000018  00000019  00000020  00000021  00000022  00000023  00000024  00000025  00000026  00000027  00000028  00000029
TestIntrin/right/: 00000000  00000001  00000002  00000003  00000004  00000005  00000006  00000007  00000008  00000009  00000010  00000011  00000012  00000013  00000014  00000015  00000016  00000017  00000018  00000019  00000020  00000021  00000022  00000023  00000024  00000025  00000026  00000027  00000028  00000029
